* Version 1.16 (unreleased)

* Version 1.15 (released 2014-09-30)

  * Fix boolean SQL portability issue for Oracle.

  * Add self-testing through Travis.

  * Update some URLs.

* Version 1.14 (released 2013-09-18)

  * Add Oracle support via OCI.

  * The README is included in the tarball now.

* Version 1.13 (released 2013-04-17)

  * Updated release procedure, project moved from Google Code to GitHub.

* Version 1.12 (released 2013-02-05)

  * Added COPYING file.

* Version 1.11 (released 2013-01-31)

  * Added missing manprefix to Makefile.

* Version 1.10 (released 2013-01-31)

  * Changed location of files to /usr/share/yubikey-ksm, etc.

  * Changed location of configuration files to /etc/yubico/ksm/.

  * Fixed bug causing scripts reading the database to fail if
    the config file exists but is not readable by the current user.

* Version 1.9 (released 2013-01-23)

  * Renamed hex2bin to yubi_hex2bin.
    Issue #1 reported by Dain Nilsson, see:
    https://github.com/Yubico/yubikey-ksm/issues/1

* Version 1.8 (released 2013-01-21)

  * Added ChangeLog to releases.

  * Updated documentation for building/installing.

* Version 1.7 (released 2012-12-21)

  * Replaced usage of 'mcrypt_ecb' as it is deprecated.
    Issue #5 reported by Gyula Szabó, see:
    http://code.google.com/p/yubikey-ksm/issues/detail?id=5.

  * Read database config from /etc/yubico/ksm/config-db files,
    as generated by dbconfig.

* Version 1.6 (released 2012-12-18)

  * ykksm-gen-keys supports the PSKC YubiKey profile.

  * ykksm-checksum sorts by serial number first.

  * Removed .pl extension from scripts.

  * Added man pages.

  * Removed ykksm-upgrade.

* Version 1.5 (released 2010-09-14)

  * Brown paper bag release to update NEWS and Makefile before release.

* Version 1.4 (released 2010-09-14)

  * Don't use PDO rowCount, it is not portable.
    Issue #2 reported by arte42.ripe, see:
    http://code.google.com/p/yubikey-ksm/issues/detail?id=2.
