@@ -33,19 +33,37 @@ require_once 'ykksm-config.php';
 require_once 'ykksm-utils.php';
 ob_end_clean();
 
+function send_response($status_code, $content) {
+  if (!function_exists('http_response_code')) {
+    header("X-PHP-Response-Code: $status_code", true, $status_code);
+  } else {
+    http_response_code($status_code);
+  }
+  if (isset($_REQUEST["format"]) && $_REQUEST["format"] == "json") {
+    $content_type = "application/json";
+    if (gettype($content) == "string") { $content = array("status" => rtrim($content)); }
+    $content = json_encode($content);
+  } else {
+    $content_type = "text/html";
+  }
+  header("Content-type: $content_type");
+  ($status_code == 200) ? print($content) : exit($content);
+}
+
+
 openlog("ykksm", LOG_PID, $logfacility)
-  or die("ERR Syslog open error\n");
+  or send_response(500, "ERR Syslog open error\n");
 
 $otp = $_REQUEST["otp"];
 if (!$otp) {
   syslog(LOG_INFO, "No OTP provided");
-  die("ERR No OTP provided\n");
+  send_response(400, "ERR No OTP provided\n");
  }
 
 if (!preg_match("/^([cbdefghijklnrtuv]{0,16})([cbdefghijklnrtuv]{32})$/",
 		$otp, $matches)) {
   syslog(LOG_INFO, "Invalid OTP format: $otp");
-  die("ERR Invalid OTP format\n");
+  send_response(400, "ERR Invalid OTP format\n");
  }
 $id = $matches[1];
 $modhex_ciphertext = $matches[2];
@@ -59,7 +77,7 @@ if (!$use_oci) {
     $dbh = new PDO($db_dsn, $db_username, $db_password, $db_options);
    } catch (PDOException $e) {
     syslog(LOG_ERR, "Database error: " . $e->getMessage());
-    die("ERR Database error\n");
+    send_response(500, "ERR Database error\n");
    }
  }
 else {
@@ -69,7 +87,7 @@ else {
   if (!$dbh) {
     $error = oci_error();
     syslog(LOG_err, "Database error: " . $error["message"]);
-    die("ERR Database error\n");
+    send_response(500, "ERR Database error\n");
    }
  }
 
@@ -82,7 +100,7 @@ if (!$use_oci) {
   if (!$result) {
     syslog(LOG_ERR, "Database query error.  Query: " . $sql . " Error: " .
            print_r ($dbh->errorInfo (), true));
-    die("ERR Database error\n");
+    send_response(500, "ERR Database error\n");
    }
 
   $row = $result->fetch(PDO::FETCH_ASSOC);
@@ -98,7 +116,7 @@ else {
     syslog(LOG_ERR, 'Database query error.   Query:  ' . $sql . 'Error: CODE : ' . $error["code"] .
            ' MESSAGE : ' . $error["message"] . ' POSITION : ' . $error["offset"] .
            ' STATEMENT : ' . $error["sqltext"]);
-    die("ERR Database error\n");
+    send_response(500, "ERR Database error\n");
    }
 
   $row = oci_fetch_array($result, OCI_ASSOC);
@@ -108,7 +126,7 @@ else {
 
 if (!$aeskey) {
   syslog(LOG_INFO, "Unknown yubikey: " . $otp);
-  die("ERR Unknown yubikey\n");
+  send_response(400, "ERR Unknown yubikey\n");
  }
 
 $ciphertext = modhex2hex($modhex_ciphertext);
@@ -117,12 +135,12 @@ $plaintext = aes128ecb_decrypt($aeskey, $ciphertext);
 $uid = substr($plaintext, 0, 12);
 if (strcmp($uid, $internalname) != 0) {
   syslog(LOG_ERR, "UID error: $otp $plaintext: $uid vs $internalname");
-  die("ERR Corrupt OTP\n");;
+  send_response(400, "ERR Corrupt OTP\n");
  }
 
 if (!crc_is_good($plaintext)) {
   syslog(LOG_ERR, "CRC error: $otp: $plaintext");
-  die("ERR Corrupt OTP\n");
+  send_response(400, "ERR Corrupt OTP\n");
  }
 
 # Mask out interesting fields
@@ -134,9 +152,15 @@ $use = substr($plaintext, 22, 2);
 $out = "OK counter=$counter low=$low high=$high use=$use";
 
 syslog(LOG_INFO, "SUCCESS OTP $otp PT $plaintext $out")
-  or die("ERR Log error\n");
+  or send_response(500, "ERR Log error\n");
 
-print "$out\n";
+if (isset($_REQUEST['format']) && $_REQUEST['format'] == "json") {
+  send_response(200, array('counter' => $counter, 'low' => $low,
+                           'high' => $high, 'use' => $use));
+ }
+else {
+  send_response(200, "$out\n");
+ }
 
 # Close database connection.
 $dbh = null;
